# Lab8-Testing

./: CMakeLists.txt  Makefile  README.md  build.sh  dynamic_block  static_block
Step5/: CMakeLists.txt
Step5/MathFunctions/: mysqrt.cxx
Step5_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tutorial  cmake_install.cmake
Step5_build/MathFunctions/: Makefile  cmake_install.cmake
